# perception

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
etc/: settings.json
launch/: perception.launch  receiver_node.launch
scripts/: airsim_ros_wrapper.py  perception.py  perceptionBACK.py  perception_all_in_one copy.py  perception_all_in_one.py  perception_with_filter.py  receiver.py  start_node.sh  test.py  yolo_image_processor.py
scripts/easyGL/: README.md  __init__.py  airsim_gl.py  transform.py
scripts/test/: test.py
scripts/test/easyGL/: README.md  airsim_gl.py  test.py  transform.py  utils.py
